<resources>
    <string name="app_name">#Goals</string>
    <string name="facebook_app_id">408567052813625</string>
    <string name="fb_login_protocol_scheme">fb408567052813625</string>
    <string name="mode_edit_goal">편집</string>
    <string name="goal_edit_title">편집하기</string>
    <string name="goal_setting_title">설정하기</string>
    <string name="goal_logo">로고 이미지</string>
    <string name="login_skip">건너뛰기</string>
    <string name="goal">목표</string>

    <string name="handle_drag">드래그 핸들</string>
    <string name="off_checkbox">체크박스오프</string>
    <string name="on_checkbox">체크박스온</string>
    <string name="button_repeat">반복횟수표시버튼</string>
    <string name="button_add">큰목표추가버튼</string>
    <string name="arrow_back">뒤로버튼</string>
    <string name="icon_logo">로고 아이콘</string>
    <string name="image_text_logo">로고 텍스트 이미지</string>

    <string name="cancle_goal_set">취소</string>
    <string name="hint_goal_set">당신의 목표는 무엇인가요?</string>
    <string name="save_goal_set">저장</string>
    <string name="title_sub_goal_set">알림 반복 주기</string>
    <string name="title_goal_set">목표 설정하기</string>

    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>

    <!--Setting-->
    <string name="time_reset_setting">목표 초기화 시간</string>
    <string name="time_check_setting">목표 확인 시간</string>
    <string name="default_repeat_setting">기본 반복 횟수</string>
    <string name="default_alarm_repeat_setting">기본 알림 반복 주기</string>
    <string name="default_abandoned_setting">방치한 일 기준일</string>

    <string name="ask_sth_setting">뭐지 여기 들어갈 문장은</string>
    <string name="ask_replay_setting">다시하기 시에 항상 물어보기</string>

    <string name="backup_setting">백업 내보내기</string>
    <string name="rate_setting">Google Play에서 평가하기</string>
    <string name="ask_setting">문의하기</string>

    <string name="version_setting">현재 버전</string>
    <string name="license_setting">오픈소스 라이선스</string>

    <string name="logout_setting">로그아웃 하기</string>
    <string name="withdraw_setting">탈퇴하기</string>
</resources>
