<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:minHeight="?android:attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@color/goals_color"
    app:contentInsetLeft="0dp"
    app:contentInsetStart="0dp"
    app:contentInsetStartWithNavigation="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetEnd="0dp"
    app:theme="@style/goal_toolbar_style">

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/image_logo"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="9dp"
            android:layout_marginEnd="9dp"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:layout_centerVertical="true"
            android:layout_gravity="start"
            android:visibility="gone"
            android:src="@drawable/logo_icon"
            android:contentDescription="@string/icon_logo" />

        <ImageView
            android:id="@+id/arrow_back"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:paddingRight="9dp"
            android:paddingEnd="9dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_back"
            android:layout_gravity="start"
            android:visibility="gone"
            android:contentDescription="@string/arrow_back" />

        <ImageView
            android:id="@+id/image_text_logo"
            android:layout_width="54dp"
            android:layout_height="16dp"
            android:layout_toRightOf="@id/image_logo"
            android:layout_toEndOf="@id/image_logo"
            android:layout_centerVertical="true"
            android:src="@drawable/logo"
            android:visibility="gone"
            android:contentDescription="@string/image_text_logo" />

        <TextView
            android:id="@+id/edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_edit_title"
            android:textSize="18sp"
            android:textColor="@color/goals_white"
            android:visibility="gone"/>

    </RelativeLayout>


</android.support.v7.widget.Toolbar>